# inf_project

./: README.md  class.cpp  class_bomb_flight.cpp  field.txt  field1.txt  monsters.txt  save.txt
1/: field.txt  monsters.txt  objects.txt
2/: field.txt  monsters.txt  objects.txt
game/: class.cpp  save.txt
game/1/: monsters.txt  objects.txt
game/2/: monsters.txt  objects.txt
game_cmake/: CMakeLists.txt  functions.cpp  functions.h  game  item.cpp  item.h  main.cpp  monster.cpp  monster.h  object.cpp  object.h  player.cpp  player.h  save.txt
game_cmake/1/: field.txt  monsters.txt  objects.txt
game_cmake/2/: objects.txt
